force-app/main/default/objects/Customer_VIsit_With_Rank__c/Customer_VIsit_With_Rank__c.object-meta.xml
<CustomObject>
    <label>Customer VIsit With Rank</label>
    <nameField>
        <displayFormat>RA-{YYYY}{MM}{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer VIsit With Ranks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>