force-app/main/default/objects/Customer_VIsit_With_Rank__c/fields/Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit__c</fullName>
    <label>Customer Visit</label>
    <referenceTo>Customer_Visit__c</referenceTo>
    <relationshipLabel>Customer VIsit With Ranks</relationshipLabel>
    <relationshipName>Customer_VIsit_With_Ranks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>