force-app/main/default/objects/Customer_VIsit_With_Rank__c/fields/Hisense__c.field-meta.xml
<CustomField>
    <fullName>Hisense__c</fullName>
    <label>Hisense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>