force-app/main/default/objects/Customer_VIsit_With_Rank__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>